# QmlGraphicEditor

./: .gitignore  CMakeLists.txt
src/: figuresstorage.cpp  linesegment.h  qtqmlinteractor.cpp
